tests/ui/macros/issue-39404.stderr
error: missing fragment specifier
  --> $DIR/issue-39404.rs:3:19
   |
LL | macro_rules! m { ($i) => {} }
   |                   ^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #40107 <https://github.com/rust-lang/rust/issues/40107>
   = note: `#[deny(missing_fragment_specifier)]` on by default

error: aborting due to 1 previous error

Future incompatibility report: Future breakage diagnostic:
error: missing fragment specifier
  --> $DIR/issue-39404.rs:3:19
   |
LL | macro_rules! m { ($i) => {} }
   |                   ^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #40107 <https://github.com/rust-lang/rust/issues/40107>
   = note: `#[deny(missing_fragment_specifier)]` on by default

